# simple-cpp-drone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  msp.hpp  msp_node.cpp  serial.hpp  state.h  utils.h  velocity.m
analyse/: natnet-orig-pprz.csv  natnet-seperate-WiFi.csv  natnet-wifi-on-camera-network.csv  natnet_jitter.m  natnet_jitter.m~  plot_opt.py  rpi-old-method.csv  timestamp_profile.m
firmware/: README.md  trashcan.dump
ground_station/: CMakeLists.txt  LICENSE  README.md
ground_station/include/: natnet.hpp  settings.h  state.h  state_machine.hpp  utils.h
ground_station/src/: natnet.cpp  user_ai.cpp
include/: control.hpp  msp.hpp  natnet.hpp  settings.h  state.h  state_machine.hpp  user_ai.hpp  utils.h
remote/: CMakeLists.txt  README.md  upload.exp
remote/firmware/: kakute-default.diff  kakute-msp-override1.diff  kakute-msp-override2.diff  tinyhawk2-default.dump  trashcan-msp.diff  x220-iros.diff
remote/include/: control.hpp  ctrl_optimizer.hpp  flightplan.hpp  msp.hpp  msp_node.hpp  settings.h  state_machine.hpp  user_ai.hpp  utils.h
remote/src/: control.cpp  ctrl_optimizer.cpp  flightplan.cpp  msp_node.cpp  natnet.cpp  opt.cpp  serial.cpp  user_ai.cpp
src/: control.cpp  msp_node.cpp  natnet.cpp  state_machine.cpp  user_ai.cpp
